fix create config file